Updates for Class

--- a/W1-L2-CodeAlong-UFOs.ipynb
+++ b/W1-L2-CodeAlong-UFOs.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7dd25599",
    "metadata": {
     "ExecuteTime": {
@@ -317,6 +317,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1faf949-0725-4737-979e-b0fc40a73ccc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checking to see if this the sole source of errors from the dataframe by comparing the shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b62d55f-456a-4a84-bb5c-f676f47b1d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Fix the errors: "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d5c58dfe",
    "metadata": {},
@@ -389,6 +409,16 @@
    "outputs": [],
    "source": [
     "ufo_ts.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2bd4c52-141d-46fc-8657-3709d8952a9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only numeric columns are latitude and longitude"
    ]
   },
   {
@@ -744,7 +774,7 @@
    "outputs": [],
    "source": [
     "## Try seasonal decompose on the time series to find seasonality\n",
-    "\n"
+    "# Don't forget semicolon. Will prevent graphs from appearing twice\n"
    ]
   },
   {
